# Post-Quantum-TLS-Readiness-and-Downgrade-Attack-Simulator

./: .coverage  Dockerfile  README.md  docker-compose.yml  k8s-simulator.yaml  pyproject.toml  repo.sh  requirements.txt  run_all.sh  run_tests.py
.github/workflows/: lint.yml
ai_anomaly/: Dockerfile  README.md  detect.py  downgrade_detector.py  heartbleed_detector.py  logjam_detector.py  openssl_dos_detector.py  poodle_detector.py  renegotiation_detector.py  robot_detector.py
blockchain/: README.md  chaincode_stub.go  fabric_client.py
blockchain/data/: events.json
dashboard/: Dockerfile  README.md  app.py  blockchain.py  detect.py
dashboard/templates/: anomalies.html  base.html  blockchain.html  blockchain.html.new  index.html  logs.html  report.html  report.html.new  tests.html
mitm/: downgrade_attack.py  logjam_attack.py  openssl_dos_attack.py  poodle_attack.py
pq-tls-blockchain-guard/: README.md  docker-compose.yml
pq-tls-simulator/: README.md
pq-tls-simulator/dashboard/: README.md
pq_tls_sim/: __init__.py  cli.py
pq_tls_simulator.egg-info/: PKG-INFO  SOURCES.txt
scenarios/: classical_only_server.json  default.json  downgrade_attack.json  heartbleed.json  logjam.json  mitm_strip_pq.json  openssl_dos.json  poodle.json  pq_both.json  quantum_heartbleed_2025.json  quantum_logjam_2025.json  quantum_poodle_2025.json  quantum_renegotiation_2025.json  quantum_robot_2025.json  renegotiation.json  robot.json
scripts/: generate_scenarios.py
tests/: test_cve_attacks.py  test_logjam.py  test_simulator.py
tls-v2/: README.md  docker-compose.yml  readme
(+62 files in other folders)
